# fastapi-datalayer

./: .editorconfig  Dockerfile  README.md  pyproject.toml  start-database.sh
.github/actions/run-tests/: action.yml
.github/workflows/: deploy-cloud-run-setup.sh  deploy-cloud-run.yml  run-tests.yml
src/app/: __init__.py  app.py
src/app/_migrations/: v001-initial-schema.sql  v002-notifications.sql  v003-messages.sql
src/app/api/: api_factory.py  auth.py  chat.py  chats.py  dependencies.py  health.py  notifications.py  users.py
src/app/auth/: auth_service.py  dependencies.py  jwt_service.py  user_auth_service.py  user_service.py  utils.py
src/app/core/: config.py  correlation_id.py  cors.py  dependencies.py  error_handlers.py  errors.py  logs.py  prometheus.py
src/app/datalayer/: agency.py  agency_repository.py  auth_user.py  auth_user_profile.py  auth_user_profile_repository.py  auth_user_repository.py  chat.py  chat_message.py  chat_message_media.py  chat_message_media_repository.py  chat_message_recipient.py  chat_message_recipient_repository.py  chat_message_repository.py  chat_message_to_user.py  chat_repository.py  facade.py  user_account.py  user_auth.py  user_device.py  user_device_repository.py  users.py
src/app/domain/: create_some_data.py  setup.py  user_service.py
src/app/email/: email_client.py  email_client_factory.py  email_service.py
src/app/health/: health_service.py
src/app/notification/: notification_service.py
tests/: conftest.py
tests/app/: test_main.py  test_stress_test.py
tests/app/api/: test_auth.py  test_users.py  utils.py
tests/testutils/: mock_environ.py
(+13 files in other folders)
